<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>octomap_server</name>
    <version>1.16.4</version>
    <description>Example octomap server for octomap_smsgs</description>

    <author email="sari@photoneo.com">Peter Sari</author>
    <maintainer email="sari@photoneo.com">Peter Sari</maintainer>

    <license>BSD</license>
    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>octomap_msgs</depend>
    <depend>octomap</depend>

    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>
</package>
